<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/nextBt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/createTrip"
        android:textColor="@color/realWhite"
        android:textSize="16dp"
        app:layout_constraintBottom_toBottomOf="@id/toolbar"
        app:layout_constraintLeft_toLeftOf="@id/toolbar"
        app:layout_constraintRight_toRightOf="@id/toolbar"
        app:layout_constraintTop_toTopOf="@id/toolbar" />

    <TextView
        android:id="@+id/whereText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:text="@string/add_intermediate"
        android:textColor="@color/realBlack"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <ImageView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="25dp"
        android:src="@drawable/ic_location_green"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/whereText" />

    <TextView
        android:id="@+id/whereCity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:text="@string/city"
        android:textColor="@color/profilePageTextColor"
        app:layout_constraintBottom_toBottomOf="@id/location"
        app:layout_constraintLeft_toRightOf="@id/location"
        app:layout_constraintTop_toTopOf="@id/location" />


    <TextView
        android:id="@+id/whereStreet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/street"
        android:textColor="@color/profilePageTextColor"
        app:layout_constraintLeft_toRightOf="@id/location"
        app:layout_constraintTop_toBottomOf="@id/whereCity" />


    <ImageView
        android:id="@+id/icon_clue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="25dp"
        android:src="@drawable/ic_clue"
        app:layout_constraintBottom_toTopOf="@id/nextBt"
        app:layout_constraintLeft_toLeftOf="@id/nextBt" />

    <TextView
        android:layout_width="0px"
        android:layout_height="wrap_content"
        android:layout_margin="20sp"
        android:text="@string/descriptionClue"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@id/icon_clue"
        app:layout_constraintLeft_toRightOf="@id/icon_clue"
        app:layout_constraintRight_toRightOf="@id/nextBt"
        app:layout_constraintTop_toTopOf="@+id/icon_clue" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBt"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:layout_margin="25dp"
        android:background="@drawable/next_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/skip"
        android:textColor="@color/realWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/nextBt"
        app:layout_constraintLeft_toLeftOf="@id/nextBt"
        app:layout_constraintRight_toRightOf="@id/nextBt"
        app:layout_constraintTop_toTopOf="@id/nextBt" />


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/addCarBt"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_margin="50dp"
        android:background="@drawable/add_car_bt_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/addCar"
        android:textColor="@color/realWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/addCarBt"
        app:layout_constraintLeft_toLeftOf="@id/addCarBt"
        app:layout_constraintRight_toRightOf="@id/addCarBt"
        app:layout_constraintTop_toTopOf="@id/addCarBt" />

</androidx.constraintlayout.widget.ConstraintLayout>