<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSeat"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:background="@color/nextBt"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="0px"
        android:layout_height="0px"
        android:gravity="center"
        android:text="@string/trip_detalis"
        android:textColor="@color/realWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/toolbarSeat"
        app:layout_constraintLeft_toLeftOf="@id/toolbarSeat"
        app:layout_constraintRight_toRightOf="@id/toolbarSeat"
        app:layout_constraintTop_toTopOf="@id/toolbarSeat" />


    <ImageView
        android:id="@+id/icon_trip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_trip_detalis"
        app:layout_constraintBottom_toTopOf="@id/text_repet"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarSeat" />

    <TextView
        android:id="@+id/text_repet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="18sp"
        android:text="@string/repet_trip"
        android:textColor="@color/gray_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/yes"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_margin="20sp"
        android:background="@drawable/little_white_circle_bt_bg"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_repet" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/no"
        android:textColor="@color/realWhite"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/no"
        app:layout_constraintLeft_toLeftOf="@id/no"
        app:layout_constraintRight_toRightOf="@id/no"
        app:layout_constraintTop_toTopOf="@id/no" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/yes"
        android:textColor="@color/realBlack"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="@id/yes"
        app:layout_constraintLeft_toLeftOf="@id/yes"
        app:layout_constraintRight_toRightOf="@id/yes"
        app:layout_constraintTop_toTopOf="@id/yes" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no"
        android:layout_width="90dp"
        android:layout_height="35dp"
        android:layout_margin="20sp"
        android:background="@drawable/little_circle_bt_bg"
        app:layout_constraintLeft_toRightOf="@id/yes"
        app:layout_constraintTop_toBottomOf="@id/text_repet" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/nextBt"
        android:layout_width="match_parent"
        android:layout_height="?android:actionBarSize"
        android:layout_margin="25dp"
        android:background="@drawable/next_bg"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elevation="5dp"
        android:text="@string/next"
        android:textColor="@color/realWhite"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/nextBt"
        app:layout_constraintLeft_toLeftOf="@id/nextBt"
        app:layout_constraintRight_toRightOf="@id/nextBt"
        app:layout_constraintTop_toTopOf="@id/nextBt" />


</androidx.constraintlayout.widget.ConstraintLayout>